# LogConsole

./: .gitignore  CMakeLists.txt  ConsoleResources.qrc  FunctionSelectorWidget.cpp  FunctionSelectorWidget.h  LICENSE  LogConsole.pri  LogConsole.pro  LogConsoleWidget.cpp  LogConsoleWidget.h  LogConsoleWidget.ui  LogWidgetSettings.cpp  LogWidgetSettings.h  LogWidgetSettings.ui  Logging.cpp  Logging.h  LoggingEncoder.h  README.md  main.cpp  resources.qrc
backup logConsole threading/: FunctionSelectorWidget.cpp  FunctionSelectorWidget.h  LogConsoleWidget.cpp  LogConsoleWidget.h  LogWidgetSettings.cpp  LogWidgetSettings.h  Logging.cpp
drafts/backup logConsole threading/: FunctionSelectorWidget.cpp  FunctionSelectorWidget.h  LogConsoleWidget.cpp  LogConsoleWidget.ui  LogWidgetSettings.cpp  LogWidgetSettings.h  LogWidgetSettings.ui  Logging.cpp  Logging.h
drafts/попытка создать свой textEdit/: LogLinesDisplayWidget.cpp  LogLinesDisplayWidget.h
resources/: StyleSheetTolmi1.qss
попытка создать свой textEdit/: LogLinesDisplayWidget.cpp  LogLinesDisplayWidget.h
